<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setting.SettingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.Material3.Toolbar.OnSurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24dp"
        app:navigationIconTint="?attr/colorPrimary"
        app:title="@string/setting"
        app:titleTextColor="?attr/colorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/commonTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/common"
        android:textColor="@color/material_grey_500"
        android:textSize="14sp"
        android:textStyle="bold" />

    <include
        android:id="@+id/darkModeSwitch"
        layout="@layout/item_setting_list_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:background="@color/material_grey_300" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/otherTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/other"
        android:textColor="@color/material_grey_500"
        android:textSize="14sp"
        android:textStyle="bold" />

    <include
        android:id="@+id/aboutApp"
        layout="@layout/item_setting_list_layout" />

    <include
        android:id="@+id/sourceCode"
        layout="@layout/item_setting_list_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="@string/logout" />

</LinearLayout>